micah/src/styles/HomePage.module.css
.introDisplay {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-family: "BBH Hegarty", sans-serif;
    font-size: clamp(1.3rem, 1.045rem + 1.27vw, 2rem);
    color: hsl(0, 0%, 95%);
    height: 70%;
    min-width: 75%;
    background-color: hsl(0, 0%, 93%);
    border-radius: 10px;
    box-shadow: none;
    padding: min(1.5rem, 5%);
}

.introDisplay h1, .introDisplay h3 {
    margin: 5px 0;
    color: hsl(0, 0%, 95%)!important;
}

.secTwo {
    height: 100vh;
    display: flex;
}

.cardContainer {
    height: 100%;
    width: 50%;
    box-sizing: border-box;
    padding: min(4rem, 5%) ;
}

.scrollContainer {
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    background-color: hsl(0, 0%, 93%);
    border-radius: 10px;
    overflow: hidden;
}

.scrollOverlay {
    position: absolute;
    inset: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 1.25rem;
    font-weight: 500;
    line-height: 1.5;
    box-shadow: inset 0px 2px 12px var(--cta-btn), inset 2px 0px 12px rgba(204, 0, 204, 0.7);
    border-radius: 10px;
    padding: min(2rem, 7%);
    z-index: 2;
}

.infiniteScroll {
    display: flex;
    justify-content: center;
    align-items: center;
    width: max-content;
    height: 75%;
    animation: scroll 20s linear infinite;
}

.items {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25vw;
    font-size: clamp(3rem, 0.455rem + 12.73vw, 10rem);
    color: hsl(0, 0%, 85%);
    text-align: center;
}

@keyframes scroll {
    0% {transform: translateX(-50%);}
    100% {transform: translateX(0);}
}

.ctaBtn {
    font-size: 1.1rem;
    min-width: 150px;
    padding: 0.5rem 1rem;
    color: var(--font-primary);
    border: 2px solid var(--font-primary);
    border-radius: 5px;
    cursor: pointer;
    transition: 0.5s ease;
}

.ctaBtn:hover {
    color: var(--cta-secondary);
    border: 2px solid var(--cta-secondary);
    transform: scale(1.05);
}

.btn {
    font-size: 1.1rem;
    min-width: 150px;
    padding: 0.5rem 1rem;
    color: var(--font-primary);
    background-color: var(--cta-secondary);
    border: 2px solid var(--cta-secondary);
    border-radius: 5px;
    cursor: pointer;
    transition: 0.5s ease;
}

.btn:hover {
    color: var(--cta-secondary);
    background-color: hsl(300, 100%, 80%);
    border: 2px solid var(--cta-secondary);
    transform: scale(1.05);
}

.icon {
    color: hsl(0, 0%, 85%);
    width: clamp(3rem, 0.455rem + 12.73vw, 10rem);
    height: clamp(3rem, 0.455rem + 12.73vw, 10rem);
}

.iconTwo {
    color: hsl(0, 0%, 85%);
    width: 15rem;
  height: 15rem;
  transform: translateY(-30%) translateX(25%);
}

@media (max-width: 768px) {
    .secTwo {
        flex-direction: column;
    }

    .cardContainer {
        width: 100%;
    }
}

